# Arboretum

./: .gitignore  CMakeLists.txt  README.md  array.h  array2.c  array2.cpp  array2.h  ascii.c  assert.c  assert.cpp  assert.h  asset_paths.c  asset_paths.cpp  asset_paths.h  bitmap.c  bitmap.cpp  bitmap.h  bmfont.c  bmfont.cpp  bmfont.h  bmp.cpp  bmp.h  camera.c  camera.cpp  camera.h  closest_point_of_approach.cpp  closest_point_of_approach.h  colours.cpp  colours.h  complex_math.c  complex_math.cpp  complex_math.h  debug_draw.c  debug_draw.h  debug_readout.c  debug_readout.h  default.loc  dense_map.c  dense_map.cpp  dense_map.h  (+135 more)
Assets/Fonts/: droid_12.fnt
Assets/Locales/: default.loc
Assets/Shaders/: Depth Visualiser.fs.glsl  Depth Visualiser.fs.hlsl  Depth Visualiser.vs.glsl  Face Selection.fs.glsl  Face Selection.vs.glsl  Face Selection.vs.hlsl  Font.fs.glsl  Font.fs.hlsl  Font.vs.glsl  Fxaa.fs.glsl  Fxaa.fs.hlsl  Fxaa.vs.glsl  Fxaa.vs.hlsl  Halo.fs.glsl  Halo.fs.hlsl  Halo.vs.glsl  Halo.vs.hlsl  Line.fs.glsl  Line.vs.glsl  Line.vs.hlsl  Lit.fs.glsl  Lit.fs.hlsl  Lit.vs.glsl  Lit.vs.hlsl  PerImage.h  PerObject.h  PerView.h  Point.fs.glsl  Point.fs.hlsl  Point.vs.glsl  Point.vs.hlsl  Screen Pattern.fs.glsl  Screen Pattern.fs.hlsl  Screen Pattern.vs.glsl  Screen Pattern.vs.hlsl  Texture Only.fs.glsl  Texture Only.fs.hlsl  Texture Only.vs.glsl  Tsaa Resolve.fs.glsl  Velocity Visualiser.fs.glsl  (+5 more)
Documentation/: Makefile.sphinx  make.bat
Documentation/source/: array2.rst  ascii.rst  atr.rst  conf.py  index.rst  intro.rst  invalid_index.rst  jan.rst  map.rst  maybe_types.rst  memory.rst  string_utilities.rst  vector_math.rst
Package/: Description.txt
Source/: arboretum_config.h.in  array2.c  array2.h  ascii.c  ascii.h  asset_paths.c  atr.c  atr.h  bitmap.c  bitmap.h  bmfont.c  bmfont.h  bmp.c  bmp.h  camera.c  camera.h  closest_point_of_approach.c  colours.c  complex_math.h  debug_draw.c  debug_readout.c  dense_map.c  editor.c  editor.h  file_pick_dialog.c  file_pick_dialog.h  filesystem.c  filesystem.h  float_utilities.h  geometry.c  geometry.h  gl_core_3_3.h  glx_extensions.h  id_pool.h  immediate.c  immediate.h  input.h  int2.c  int2.h  intersection.c  (+83 more)
Test/: CMakeLists.txt
Test/Map/: main.c
Test/Unicode/: main.c
Tools/: MultiStageTable.py  build_shaders.py  build_shaders.sh  build_unicode_tries.py
